# filshare_rust

./: .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  QUICKSTART.md  README.md
migrations/: 001_create_files_table.sql  002_create_directories_table.sql
src/: db.rs  handlers.rs  main.rs  models.rs  storage.rs
